IDE added and nav created

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </head>
 <body>
 
+    <!-- =========== NAVBAR START ============= -->
+    <nav>
+        <a href="">Online IDE</a>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="IDE.html">IDE</a></li>
+            <li><a href="">Contact us</a></li>
+        </ul>
+    </nav>
+    <!-- =========== NAVBAR END ============= -->
+
     <!-- ********* JS ********** -->
     <script src="script.js"></script>
     
