Navbar on process

--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
 </head>
 <body>
 
-    <!-- =========== NAVBAR START ============= -->
-    <nav>
-        <a href="">Online IDE</a>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="IDE.html">IDE</a></li>
-            <li><a href="">Contact us</a></li>
-        </ul>
-    </nav>
-    <!-- =========== NAVBAR END ============= -->
+    <div class="main-container">
+
+        <!-- =========== NAVBAR START ============= -->
+        <nav>
+            <a href=""><span>{}</span>Online IDE</a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact us</a></li>
+                <li class="ide-btn"><a href="IDE.html" target="_blank">Code Now</a></li>
+            </ul>
+        </nav>
+        <!-- =========== NAVBAR END ============= -->
+
+
+
+    </div>
 
     <!-- ********* JS ********** -->
     <script src="script.js"></script>
