--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online IDE - Bishal</title>
+    <title>CodeWeb - IDE</title>
 
     <!-- ********** CSS ************ -->
     <link rel="stylesheet" href="./CSS/style.css">
@@ -15,7 +15,7 @@
 
         <!-- =========== NAVBAR START ============= -->
         <nav>
-            <a href=""><span>{}</span>Online IDE</a>
+            <a href=""><span>{}</span>CodeWeb</a>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
