--- a/IDE.html
+++ b/IDE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online IDE - Bishal</title>
+    <title>CodeWeb - Code Now</title>
 
     <!-- ********** CSS ********* -->
     <link rel="stylesheet" href="./CSS/IDE.css">
