--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 </head>
 <body>
 
-    <div class="main-container">
+    <!-- =========== NAVBAR START ============= -->
+    <nav class="main-container">
+        <a href="" class="logo"><span>{ }</span>CodeWeb</a>
 
-        <!-- =========== NAVBAR START ============= -->
-        <nav>
-            <a href=""><span>{}</span>CodeWeb</a>
+        <!-- *********** LIST & BUTTON START ************ -->
+        <div class="list-and-btn">
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact us</a></li>
-                <li class="ide-btn"><a href="IDE.html" target="_blank">Code Now</a></li>
             </ul>
-        </nav>
-        <!-- =========== NAVBAR END ============= -->
+            <a href="IDE.html" target="_blank" class="ide-btn">Code Now</a>
+        </div>
+        <!-- *********** LIST & BUTTON END ************ -->
 
-
-
-    </div>
+    </nav>
+    <!-- =========== NAVBAR END ============= -->
 
     <!-- ********* JS ********** -->
     <script src="script.js"></script>
