Some corrections made

--- a/index.html
+++ b/index.html
@@ -12,22 +12,32 @@
 <body>
 
     <!-- =========== NAVBAR START ============= -->
-    <nav class="main-container">
-        <a href="" class="logo"><span>{ }</span>CodeWeb</a>
-
-        <!-- *********** LIST & BUTTON START ************ -->
-        <div class="list-and-btn">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact us</a></li>
-            </ul>
-            <a href="IDE.html" target="_blank" class="ide-btn">Code Now</a>
-        </div>
-        <!-- *********** LIST & BUTTON END ************ -->
-
-    </nav>
+    <div id="navbar">
+        <nav class="main-container">
+            <a href="" class="logo"><span>{ }</span>CodeWeb</a>
+    
+            <!-- *********** LIST & BUTTON START ************ -->
+            <div class="list-and-btn">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact us</a></li>
+                </ul>
+                <a href="IDE.html" target="_blank" class="ide-btn">Code Now</a>
+            </div>
+            <!-- *********** LIST & BUTTON END ************ -->
+    
+        </nav>
+    </div>
     <!-- =========== NAVBAR END ============= -->
+
+    <!-- ************* HERO SECTION START *************** -->
+    <section id="hero">
+        <div class="hero-div main-container">
+
+        </div>
+    </section>
+    <!-- ************* HERO SECTION END *************** -->
 
     <!-- ********* JS ********** -->
     <script src="script.js"></script>
