--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
 
     <!-- ************* HERO SECTION START *************** -->
     <section id="hero">
-        <div class="hero-div main-container">
-
+        <div class="hero-div main-container row">
+            <div class="col hero-info-div">
+                <h1>Free Online IDE <br />for Web</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur aut repellendus, laboriosam hic ullam ut voluptatibus earum suscipit sit culpa quidem labore temporibus! Facere, sed necessitatibus? Quisquam mollitia maiores aliquam.</p>
+                <a href="IDE.html" target="_blank">Start Coding</a>
+            </div>
+            <div class="col hero-img-div">
+                <img src="./Images/CodeWeb-Hero-img.png" alt="">
+            </div>
         </div>
     </section>
     <!-- ************* HERO SECTION END *************** -->
