Feature section is on progress

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     <!-- =========== NAVBAR END ============= -->
 
+
     <!-- ************* HERO SECTION START *************** -->
     <section id="hero">
         <div class="hero-div main-container row">
@@ -45,6 +46,21 @@
         </div>
     </section>
     <!-- ************* HERO SECTION END *************** -->
+
+
+    <!-- *************** FEATURES SECTION START ************* -->
+    <section id="features">
+        <div class="features-div main-container">
+            <h2>Things CodeWeb Provide</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, dolores facere vitae ipsum labore beatae assumenda quia laborum nam dignissimos voluptas fugit praesentium! Quis a suscipit voluptatibus sint corrupti vitae?</p>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </div>
+    </section>
+    <!-- *************** FEATURES SECTION END *************** -->
 
     <!-- ********* JS ********** -->
     <script src="script.js"></script>
