Features section done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- *********** LIST & BUTTON START ************ -->
             <div class="list-and-btn">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact us</a></li>
                 </ul>
@@ -33,7 +33,7 @@
 
 
     <!-- ************* HERO SECTION START *************** -->
-    <section id="hero">
+    <header id="hero">
         <div class="hero-div main-container row">
             <div class="col hero-info-div">
                 <h1>Free Online IDE <br />for Web</h1>
@@ -44,7 +44,7 @@
                 <img src="./Images/CodeWeb-Hero-img.png" alt="">
             </div>
         </div>
-    </section>
+    </header>
     <!-- ************* HERO SECTION END *************** -->
 
 
@@ -54,13 +54,36 @@
             <h2>Things CodeWeb Provide</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, dolores facere vitae ipsum labore beatae assumenda quia laborum nam dignissimos voluptas fugit praesentium! Quis a suscipit voluptatibus sint corrupti vitae?</p>
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <div class="feature-img-div">
+                        <img src="./Images/HTML.png" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="feature-img-div">
+                        <img src="./Images/CSS.png" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="feature-img-div">
+                        <img src="./Images/JS.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- *************** FEATURES SECTION END *************** -->
+
+
+    <!-- ************* ABOUT SECTION START ************** -->
+    <!-- ************* ABOUT SECTION END ************** -->
+
+    <!-- ************** TESTIMONIAL SECTION START ************ -->
+    <!-- ************** TESTIMONIAL SECTION END ************ -->
+
+    <!-- ************* FOOTER START ************** -->
+    <footer></footer>
+    <!-- ************* FOOTER END ************** -->
 
     <!-- ********* JS ********** -->
     <script src="script.js"></script>
