Nav added in IDE and About section on going

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="hero-div main-container row">
             <div class="col hero-info-div">
                 <h1>Free Online IDE <br />for Web</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur aut repellendus, laboriosam hic ullam ut voluptatibus earum suscipit sit culpa quidem labore temporibus! Facere, sed necessitatibus? Quisquam mollitia maiores aliquam.</p>
+                <p>Welcome to <span>CodeWeb Online IDE</span> - your hassle-free solution for quickly testing and learning HTML, CSS, and JavaScript! Say goodbye to the complexities of downloading separate IDEs; here, you can dive straight into coding without any setup.</p>
                 <a href="IDE.html" target="_blank">Start Coding</a>
             </div>
             <div class="col hero-img-div">
@@ -52,7 +52,7 @@
     <section id="features">
         <div class="features-div main-container">
             <h2>Things CodeWeb Provide</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, dolores facere vitae ipsum labore beatae assumenda quia laborum nam dignissimos voluptas fugit praesentium! Quis a suscipit voluptatibus sint corrupti vitae?</p>
+            <p> Whether you're a seasoned developer looking for a quick check or a student eager to learn, our platform offers a seamless experience. Experiment with code, refine your skills, and unleash your creativity in a user-friendly environment. Start coding effortlessly and explore the endless possibilities of web development right at your fingertips!</p>
             <div class="row">
                 <div class="col">
                     <div class="feature-img-div">
@@ -76,6 +76,18 @@
 
 
     <!-- ************* ABOUT SECTION START ************** -->
+    <section id="about">
+        <div class="about-section row">
+            <div class="col">
+                <h2>About</h2>
+                <p>Meet Bishal Kumar Shaw, the brains behind an innovative Online IDE called CodeWeb where coding HTML, CSS, and JavaScript becomes as simple as a few clicks. With a passion for making coding accessible to all, Bishal Kumar Shaw has crafted a user-friendly platform for aspiring developers and seasoned pros alike to bring their web projects to life, anytime, anywhere
+                </p>
+            </div>
+            <div class="col about-img">
+                <img src="./Images/CodeWeb-Author.png" alt="">
+            </div>
+        </div>
+    </section>
     <!-- ************* ABOUT SECTION END ************** -->
 
     <!-- ************** TESTIMONIAL SECTION START ************ -->
@@ -90,3 +102,9 @@
     
 </body>
 </html>
+
+<!-- "This Online IDE is a game-changer! As a beginner, I found it incredibly easy to use and learn HTML, CSS, and JavaScript. Highly recommended!" - Sarah H.
+"I love how I can quickly test my code without the hassle of downloading multiple programs. This platform is perfect for on-the-go coding!" - Mark L.
+"As an educator, this Online IDE has revolutionized how I teach coding. My students are engaged and learning faster than ever before." - Professor Smith
+"Finally, an IDE that simplifies web development without sacrificing functionality. A must-have tool for developers of all levels!" - David M.
+"I've tried several online coding platforms, but this one stands out for its intuitive interface and lightning-fast performance. 10/10!" - Emily W. -->
