--- a/IDE.html
+++ b/IDE.html
@@ -7,9 +7,30 @@
 
     <!-- ********** CSS ********* -->
     <link rel="stylesheet" href="./CSS/IDE.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 
 </head>
 <body>
+
+    <!-- =========== NAVBAR START ============= -->
+    <div id="navbar">
+        <nav class="main-container">
+            <a href="" class="logo"><span>{ }</span>CodeWeb</a>
+    
+            <!-- *********** LIST & BUTTON START ************ -->
+            <div class="list-and-btn">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact us</a></li>
+                </ul>
+                <a href="IDE.html" target="_blank" class="ide-btn">Code Now</a>
+            </div>
+            <!-- *********** LIST & BUTTON END ************ -->
+    
+        </nav>
+    </div>
+    <!-- =========== NAVBAR END ============= -->
 
     <div class="container">
         <div class="left">
