Testimonials on going

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- ************* ABOUT SECTION START ************** -->
     <section id="about">
-        <div class="about-section row">
+        <div class="about-section main-container row">
             <div class="col">
                 <h2>About</h2>
                 <p>Meet Bishal Kumar Shaw, the brains behind an innovative Online IDE called CodeWeb where coding HTML, CSS, and JavaScript becomes as simple as a few clicks. With a passion for making coding accessible to all, Bishal Kumar Shaw has crafted a user-friendly platform for aspiring developers and seasoned pros alike to bring their web projects to life, anytime, anywhere
@@ -91,6 +91,12 @@
     <!-- ************* ABOUT SECTION END ************** -->
 
     <!-- ************** TESTIMONIAL SECTION START ************ -->
+    <section id="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonials-section main-container row">
+            
+        </div>
+    </section>
     <!-- ************** TESTIMONIAL SECTION END ************ -->
 
     <!-- ************* FOOTER START ************** -->
