Testimonial section done

--- a/index.html
+++ b/index.html
@@ -94,7 +94,36 @@
     <section id="testimonials">
         <h2>Testimonials</h2>
         <div class="testimonials-section main-container row">
-            
+            <div class="col rev-div">
+                <div class="row">
+                    <div class="col cus-img cus-img-info">
+                        <img src="./Images/cus1.jpg" alt="">
+                    </div>
+                    <div class="col cus-rev cus-img-info">
+                        <p>"This Online IDE is a game-changer! As a beginner, I found it incredibly easy to use and learn HTML, CSS, and JavaScript. Highly recommended!" - <span>Sarah H.</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col rev-div">
+                <div class="row">
+                    <div class="col cus-img cus-img-info">
+                        <img src="./Images/cus2.jpg" alt="">
+                    </div>
+                    <div class="col cus-rev cus-img-info">
+                        <p>"I love how I can quickly test my code without the hassle of downloading multiple programs. This platform is perfect for on-the-go coding!" - <span>Mark L.</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col rev-div">
+                <div class="row">
+                    <div class="col cus-img cus-img-info">
+                        <img src="./Images/cus3.jpg" alt="">
+                    </div>
+                    <div class="col cus-rev cus-img-info">
+                        <p>"As an educator, this Online IDE has revolutionized how I teach coding. My students are engaged and learning faster than ever before." - <span>Professor Smith</span></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- ************** TESTIMONIAL SECTION END ************ -->
@@ -108,9 +137,3 @@
     
 </body>
 </html>
-
-<!-- "This Online IDE is a game-changer! As a beginner, I found it incredibly easy to use and learn HTML, CSS, and JavaScript. Highly recommended!" - Sarah H.
-"I love how I can quickly test my code without the hassle of downloading multiple programs. This platform is perfect for on-the-go coding!" - Mark L.
-"As an educator, this Online IDE has revolutionized how I teach coding. My students are engaged and learning faster than ever before." - Professor Smith
-"Finally, an IDE that simplifies web development without sacrificing functionality. A must-have tool for developers of all levels!" - David M.
-"I've tried several online coding platforms, but this one stands out for its intuitive interface and lightning-fast performance. 10/10!" - Emily W. -->
