Footer section done

--- a/IDE.html
+++ b/IDE.html
@@ -21,8 +21,7 @@
             <div class="list-and-btn">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact us</a></li>
+                    <li><a href="mailto:bshaw2847@gmail.com" target="_blank">Contact us</a></li>
                 </ul>
                 <a href="IDE.html" target="_blank" class="ide-btn">Code Now</a>
             </div>
