--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="list-and-btn">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact us</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="mailto:bshaw2847@gmail.com" target="_blank">Contact us</a></li>
                 </ul>
                 <a href="IDE.html" target="_blank" class="ide-btn">Code Now</a>
             </div>
@@ -129,7 +129,15 @@
     <!-- ************** TESTIMONIAL SECTION END ************ -->
 
     <!-- ************* FOOTER START ************** -->
-    <footer></footer>
+    <footer>
+        <div class="footer-section main-container">
+            <h2><span>{ }</span> CodeWeb</h2>
+            <p>This Online IDE has become the first choice of the students and the professors. What are you waiting for! - Code Now</p>
+            <a href="IDE.html" target="_blank">Code Now</a>
+            <hr/>
+            <p>Copyright &copy; CodeWeb - 2024</p>
+        </div>
+    </footer>
     <!-- ************* FOOTER END ************** -->
 
     <!-- ********* JS ********** -->
