--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- ********** CSS ************ -->
     <link rel="stylesheet" href="./CSS/style.css">
 
+    <!-- ************* FAVICON ************* -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+
 </head>
 <body>
 
